感觉什么都没做...

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -22,7 +22,13 @@ format = \raggedright\Large\bfseries,
 \begin{document}
     \maketitle
     \begin{abstract}
-        {\noindent 这里是摘要}
+        {\noindent 这里是摘要这里是摘要
+        这里是摘要这里是摘要这里是摘要这里是摘要
+        这里是摘要这里是摘要这里是摘要这里是摘要
+        这里是摘要这里是摘要这里是摘要这里是摘要
+        这里是摘要这里是摘要这里是摘要这里是摘要
+        这里是摘要这里是摘要这里是摘要这里是摘要
+        这里是摘要}
         \par\noindent \textbf{关键词：}关注taffy谢谢喵!
     \end{abstract}
 
