修改第二第三题

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -5,6 +5,7 @@
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{graphicx}
+\usepackage{graphicx}
 
 \hypersetup{colorlinks=true, pdfstartview=FitV, 
 linkcolor=BrickRed,citecolor=BrickRed, urlcolor=BrickRed}
@@ -38,6 +39,13 @@ format = \raggedright\Large\bfseries,
     \newpage
     \section{第一部分}
     哈哈哈,孙笑川真帅!
+    
+    \section{第二部分}
+    
+    \section{第三部分}
+    
+    \section{可视化操作}
+    \noindent 主要使用pandas库对文件\textbf{birth.csv,birth\_rt.csv,death.csv,death\_rt.csv}文件进行可视化操作
 
     \newpage
     \appendix
